# agentipy_project

./: README.md  analysis.md  crypto_market_report_20250613_225529.md  crypto_market_report_20250613_230318.md  crypto_market_report_20250613_230633.md  crypto_report_20250615_195915.md  pyproject.toml  report.md  research.md  risk.md  solana_trading_flow.html
output/: complete_guide.md  guide_outline.json
src/guide_creator_flow/: main.py  solana_trading_main.py
src/guide_creator_flow/crews/solana_trading_crew/: solana_trading_crew.py  tools.py
src/guide_creator_flow/crews/solana_trading_crew/config/: agents.yaml  tasks.yaml
