[project]
name = "guide_creator_flow"
version = "0.1.0"
description = "guide_creator_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = ["agentipy>=2.1.2.post5", "crewai[tools]>=0.114.0,<1.0.0"]

[project.scripts]
kickoff = "guide_creator_flow.main:kickoff"
run_crew = "guide_creator_flow.main:kickoff"
plot = "guide_creator_flow.solana_trading_main:plot"
run_solana_trading = "guide_creator_flow.solana_trading_main:kickoff"
plot_solana_trading = "guide_creator_flow.solana_trading_main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
